vendor/wdsp/wdsp.h

/*  Sample types.  THESE MUST MATCH THE BINARY.  They are set when
  the library is compiled, and a mismatch does not fail to build -
  it silently passes the wrong sized value.  The concrete types
  below were read from comm.h when this header was generated.    */
typedef float  INREAL;
typedef float  OUTREAL;
typedef double dINREAL;
typedef float  dOUTREAL;
/* Analyzer detector modes. */
#define DETECTOR_MODE_PEAK          0
#define DETECTOR_MODE_ROSENFELL     1
#define DETECTOR_MODE_AVERAGE       2
#define DETECTOR_MODE_SAMPLE        3
#define AVERAGE_MODE_NONE           0
#define AVERAGE_MODE_RECURSIVE      1
#define AVERAGE_MODE_TIME_WINDOW    2
#define AVERAGE_MODE_LOG_RECURSIVE  3
WDSP_API void RXASetPassband (int channel, double f_low, double f_high);
WDSP_API void SetRXAMode (int channel, int mode);
WDSP_API void SetRXAAMSQRun (int channel, int run);
WDSP_API void SetRXAAMSQThreshold (int channel, double threshold);
WDSP_API void DestroyAnalyzer (int disp);
WDSP_API void GetPixels (int disp, int pixout, dOUTREAL *pix, int *flag);
WDSP_API void ResetPixelBuffers (int disp);
WDSP_API void SetAnalyzer (int disp, int n_pixout, int n_fft, int typ, int *flp, int sz, int bf_sz, int win_type,
                           double pi, int ovrlp, int clp, double fscLin, double fscHin, int n_pix, int n_stch, int calset, double fmin,
                           double fmax, int max_w);
WDSP_API void SetCalibration (int disp, int set_num, int n_points, double (*cal)[dMAX_M + 1]);
WDSP_API void SetDisplayAvBackmult (int disp, int pixout, double mult);
WDSP_API void SetDisplayAverageMode (int disp, int pixout, int mode);
WDSP_API void SetDisplayDetectorMode (int disp, int pixout, int mode);
WDSP_API void SetDisplayNormOneHz (int disp, int pixout, int norm);
WDSP_API void SetDisplayNumAverage (int disp, int pixout, int num);
WDSP_API void SetDisplaySampleRate (int disp, int rate);
WDSP_API void Spectrum (int disp, int ss, int LO, dINREAL* pI, dINREAL* pQ);
WDSP_API void Spectrum0 (int run, int disp, int ss, int LO, double *pbuff);
WDSP_API void XCreateAnalyzer (int disp, int *success, int m_size, int m_num_fft, int m_stitch, char *app_data_path);
/*  ---- bandpass.c -------------------------------------------------------- */

WDSP_API void SetRXABandpassFreqs (int channel, double f_low, double f_high);
WDSP_API void SetRXABandpassRun (int channel, int run);
/*  ---- channel.c --------------------------------------------------------- */

WDSP_API void CloseChannel (int channel);
WDSP_API void OpenChannel (int channel, int in_size, int dsp_size, int input_samplerate, int dsp_rate,
                           int output_samplerate, int type, int state, double tdelayup, double tslewup, double tdelaydown, double tslewdown,
                           int bfo);
WDSP_API void SetAllRates (int channel, int in_rate, int dsp_rate, int out_rate);
WDSP_API int SetChannelState (int channel, int state, int dmode);
WDSP_API void SetChannelTDelayDown (int channel, double time);
WDSP_API void SetChannelTDelayUp (int channel, double time);
WDSP_API void SetChannelTSlewDown (int channel, double time);
WDSP_API void SetChannelTSlewUp (int channel, double time);
WDSP_API void SetDSPBuffsize (int channel, int dsp_size);
WDSP_API void SetDSPSamplerate (int channel, int dsp_rate);
WDSP_API void SetInputBuffsize (int channel, int in_size);
WDSP_API void SetInputSamplerate (int channel, int in_rate);
WDSP_API void SetOutputSamplerate (int channel, int out_rate);
WDSP_API void SetType (int channel, int type);
WDSP_API void SetRXAEMNRRun (int channel, int run);
WDSP_API void SetRXAFMSQRun (int channel, int run);
WDSP_API void SetRXAFMSQThreshold (int channel, double threshold);
/*  ---- iobuffs.c --------------------------------------------------------- */

WDSP_API void fexchange0 (int channel, double *in, double *out, int *error);
WDSP_API void fexchange2 (int channel, INREAL *Iin, INREAL *Qin, OUTREAL *Iout, OUTREAL *Qout, int *error);
/*  ---- meter.c ----------------------------------------------------------- */

enum rxaMeterType {
  RXA_S_PK,
  RXA_S_AV,
  RXA_ADC_PK,
  RXA_ADC_AV,
  RXA_AGC_GAIN,
  RXA_AGC_PK,
  RXA_AGC_AV,
  RXA_METERTYPE_LAST
};
WDSP_API void SetRXANNRRun(int channel, int setit);
/*  ---- version.c --------------------------------------------------------- */

WDSP_API int GetWDSPVersion(void);
/*  ---- wisdom.c ---------------------------------------------------------- */

WDSP_API int WDSPwisdom(char *directory);