src/wdsp_sys/mod.rs

/*
    Copyright (C) 2025  John Melton G0ORX/N6LYT

    This program is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    This program is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with this program.  If not, see <https://www.gnu.org/licenses/>.
*/

#![allow(non_camel_case_types)]
// Constants mirror WDSP's own C enum names verbatim (e.g.
// txaMeterType_TXA_CFC_GAIN) -- same "keep 1:1 with the C headers for
// easy cross-referencing" reasoning as non_camel_case_types above,
// rather than renaming ~26 constants (and their call sites) for no
// benefit besides a quieter build.
#![allow(non_upper_case_globals)]
// This binds WDSP's full C API surface; this app only calls a subset
// of it today, and more may get wired up as features are added --
// unused bindings aren't dead code to delete, they're the rest of the
// library sitting there for when it's needed.
#![allow(dead_code)]

/// Serializes WDSP channel setup AND teardown (OpenChannel/
/// CloseChannel/DestroyAnalyzer and everything around them, including
/// the FFTW wisdom-generation pass triggered on a fresh machine/config
/// -- see spectrum.rs's WDSPwisdom call) across EVERY channel this
/// process opens or closes, RXA and TXA alike -- not just among
/// receivers. FFTW's planner is well-documented as unsafe to call
/// concurrently from multiple threads, and every WDSP channel
/// (spectrum.rs's SpectrumAnalyzer::open/drop for RXA, tx.rs's
/// TxProcessor::open/drop for TXA) touches it during both setup and
/// teardown, each on its own independent background thread.
///
/// Previously this was a `Mutex` local to SpectrumAnalyzer::open,
/// added after a segfault reproduced when multiple *receiver* threads
/// opened concurrently at startup -- it correctly serialized RXA
/// against RXA, but TXA's OpenChannel call in tx.rs took no lock at
/// all, so it could still race against an in-progress RXA setup (most
/// dangerously the wisdom pass, which can run long enough on a first-
/// ever launch for TX setup -- started unconditionally alongside RX at
/// initial connect, see main.rs's MicInput::start/TxHandle::start call
/// site -- to land right in the middle of it), corrupting FFTW's
/// shared planner state (glibc's "double free or corruption (!prev)"
/// is the classic symptom). Now shared here so both call sites
/// serialize against each other, not just against their own kind.
///
/// EXTENDED to teardown (2026-09-19) after a real report: closing two
/// channels (e.g. an RX channel and a TX channel, each torn down on its
/// own background thread at disconnect) at close to the same moment
/// could race the exact same way OpenChannel could, but CloseChannel/
/// DestroyAnalyzer were never covered by this lock -- only setup was.
/// Confirmed via a real gdb backtrace: a "double free or corruption"
/// abort inside CloseChannel's own call chain, with no lock held
/// anywhere on the stack. See SpectrumAnalyzer::drop/TxProcessor::drop.
///
/// Each channel's own steady-state feed()/demod()/run() loop, in
/// between setup and teardown, is untouched by this lock and continues
/// to run fully concurrently -- only the one-time setup sequence and
/// the equally one-time teardown sequence take it.
pub static SETUP_LOCK: std::sync::Mutex<()> = std::sync::Mutex::new(());

pub const DETECTOR_MODE_PEAK: u32 = 0;
pub const DETECTOR_MODE_ROSENFELL: u32 = 1;
pub const DETECTOR_MODE_AVERAGE: u32 = 2;
pub const DETECTOR_MODE_SAMPLE: u32 = 3;
pub const AVERAGE_MODE_NONE: u32 = 0;
pub const AVERAGE_MODE_RECURSIVE: u32 = 1;
pub const AVERAGE_MODE_TIME_WINDOW: u32 = 2;
pub const AVERAGE_MODE_LOG_RECURSIVE: u32 = 3;
unsafe extern "C" {
    pub fn GetWDSPVersion() -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn OpenChannel(
        channel: ::std::os::raw::c_int,
        in_size: ::std::os::raw::c_int,
        dsp_size: ::std::os::raw::c_int,
        input_samplerate: ::std::os::raw::c_int,
        dsp_rate: ::std::os::raw::c_int,
        output_samplerate: ::std::os::raw::c_int,
        type_: ::std::os::raw::c_int,
        state: ::std::os::raw::c_int,
        tdelayup: f64,
        tslewup: f64,
        tdelaydown: f64,
        tslewdown: f64,
        bfo: ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn CloseChannel(channel: ::std::os::raw::c_int);
}
unsafe extern "C" {
    pub fn SetType(channel: ::std::os::raw::c_int, type_: ::std::os::raw::c_int);
}
unsafe extern "C" {
    pub fn SetInputBuffsize(channel: ::std::os::raw::c_int, in_size: ::std::os::raw::c_int);
}
unsafe extern "C" {
    pub fn SetDSPBuffsize(channel: ::std::os::raw::c_int, dsp_size: ::std::os::raw::c_int);
}
unsafe extern "C" {
    pub fn SetInputSamplerate(channel: ::std::os::raw::c_int, samplerate: ::std::os::raw::c_int);
}
unsafe extern "C" {
    pub fn SetDSPSamplerate(channel: ::std::os::raw::c_int, samplerate: ::std::os::raw::c_int);
}
unsafe extern "C" {
    pub fn SetOutputSamplerate(channel: ::std::os::raw::c_int, samplerate: ::std::os::raw::c_int);
}
unsafe extern "C" {
    pub fn SetAllRates(
        channel: ::std::os::raw::c_int,
        in_rate: ::std::os::raw::c_int,
        dsp_rate: ::std::os::raw::c_int,
        out_rate: ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn SetChannelState(
        channel: ::std::os::raw::c_int,
        state: ::std::os::raw::c_int,
        dmode: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn SetChannelTDelayUp(channel: ::std::os::raw::c_int, time: f64);
}
unsafe extern "C" {
    pub fn SetChannelTSlewUp(channel: ::std::os::raw::c_int, time: f64);
}
unsafe extern "C" {
    pub fn SetChannelTDelayDown(channel: ::std::os::raw::c_int, time: f64);
}
unsafe extern "C" {
    pub fn SetChannelTSlewDown(channel: ::std::os::raw::c_int, time: f64);
}
unsafe extern "C" {
    pub fn fexchange0(
        channel: ::std::os::raw::c_int,
        in_: *mut f64,
        out: *mut f64,
        error: *mut ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn fexchange2(
        channel: ::std::os::raw::c_int,
        Iin: *mut f32,
        Qin: *mut f32,
        Iout: *mut f32,
        Qout: *mut f32,
        error: *mut ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn XCreateAnalyzer(
        disp: ::std::os::raw::c_int,
        success: *mut ::std::os::raw::c_int,
        m_size: ::std::os::raw::c_int,
        m_num_fft: ::std::os::raw::c_int,
        m_stitch: ::std::os::raw::c_int,
        app_data_path: *mut ::std::os::raw::c_char,
    );
}
unsafe extern "C" {
    pub fn SetAnalyzer(
        disp: ::std::os::raw::c_int,
        n_pixout: ::std::os::raw::c_int,
        n_fft: ::std::os::raw::c_int,
        typ: ::std::os::raw::c_int,
        flp: *mut ::std::os::raw::c_int,
        sz: ::std::os::raw::c_int,
        bf_sz: ::std::os::raw::c_int,
        win_type: ::std::os::raw::c_int,
        pi: f64,
        ovrlp: ::std::os::raw::c_int,
        clp: ::std::os::raw::c_int,
        fscLin: f64,
        fscHin: f64,
        n_pix: ::std::os::raw::c_int,
        n_stch: ::std::os::raw::c_int,
        calset: ::std::os::raw::c_int,
        fmin: f64,
        fmax: f64,
        max_w: ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn Spectrum0(
        run: ::std::os::raw::c_int,
        disp: ::std::os::raw::c_int,
        ss: ::std::os::raw::c_int,
        LO: ::std::os::raw::c_int,
        in_: *mut f64,
    );
}
unsafe extern "C" {
    pub fn Spectrum(
        disp: ::std::os::raw::c_int,
        ss: ::std::os::raw::c_int,
        LO: ::std::os::raw::c_int,
        pI: *mut f32,
        pQ: *mut f32,
    );
}
unsafe extern "C" {
    pub fn GetPixels(
        disp: ::std::os::raw::c_int,
        pixout: ::std::os::raw::c_int,
        pix: *mut f32,
        flag: *mut ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn SetDisplayDetectorMode(
        disp: ::std::os::raw::c_int,
        pixout: ::std::os::raw::c_int,
        mode: ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn SetDisplayAverageMode(
        disp: ::std::os::raw::c_int,
        pixout: ::std::os::raw::c_int,
        mode: ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    // Added in WDSP 2.10.2 (see vendor/wdsp/analyzer.c's own "[2.10.2]
    // MW0LGE reset all the pixel and average buffers" comment) -- resets
    // FAR more than toggling SetDisplayAverageMode does: pixel/average
    // buffers (t_pixels/av_sum/av_buff), AND the raw-sample accumulation
    // state (have_samples/IQin_index/IQout_index/buff_ready) that feeds
    // the next FFT window. The SetDisplayAverageMode toggle trick this
    // project used before only reset av_sum, leaving whatever raw IQ
    // samples were already accumulated toward the in-progress FFT window
    // untouched -- so a fresh PTT's first FFT(s) could still be built
    // partly from samples belonging to the transmission that just ended.
    pub fn ResetPixelBuffers(disp: ::std::os::raw::c_int);
}
unsafe extern "C" {
    pub fn SetDisplayNumAverage(
        disp: ::std::os::raw::c_int,
        pixout: ::std::os::raw::c_int,
        num: ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn SetDisplayAvBackmult(
        disp: ::std::os::raw::c_int,
        pixout: ::std::os::raw::c_int,
        mult: f64,
    );
}
unsafe extern "C" {
    pub fn SetDisplayNormOneHz(
        disp: ::std::os::raw::c_int,
        pixout: ::std::os::raw::c_int,
        norm: ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn SetDisplaySampleRate(
        disp: ::std::os::raw::c_int,
        rate: ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn DestroyAnalyzer(disp: ::std::os::raw::c_int);
}
pub const rxaMeterType_RXA_S_PK: rxaMeterType = 0;
pub const rxaMeterType_RXA_S_AV: rxaMeterType = 1;
pub const rxaMeterType_RXA_ADC_PK: rxaMeterType = 2;
pub const rxaMeterType_RXA_ADC_AV: rxaMeterType = 3;
pub const rxaMeterType_RXA_AGC_GAIN: rxaMeterType = 4;
pub const rxaMeterType_RXA_AGC_PK: rxaMeterType = 5;
pub const rxaMeterType_RXA_AGC_AV: rxaMeterType = 6;
pub const rxaMeterType_RXA_METERTYPE_LAST: rxaMeterType = 7;
pub type rxaMeterType = ::std::os::raw::c_uint;
unsafe extern "C" {
    pub fn SetRXAMode(channel: ::std::os::raw::c_int, mode: ::std::os::raw::c_int);
}
unsafe extern "C" {
    pub fn SetRXABandpassRun(channel: ::std::os::raw::c_int, run: ::std::os::raw::c_int);
}
unsafe extern "C" {
    pub fn SetRXABandpassFreqs(channel: ::std::os::raw::c_int, low: f64, high: f64);
}
unsafe extern "C" {
    pub fn RXASetPassband(channel: ::std::os::raw::c_int, f_low: f64, f_high: f64);
}
unsafe extern "C" {
    pub fn SetRXAFMSQRun(channel: ::std::os::raw::c_int, run: ::std::os::raw::c_int);
}
unsafe extern "C" {
    pub fn SetRXAFMSQThreshold(channel: ::std::os::raw::c_int, threshold: f64);
}
unsafe extern "C" {
    pub fn SetRXAAMSQRun(channel: ::std::os::raw::c_int, run: ::std::os::raw::c_int);
}
unsafe extern "C" {
    pub fn SetRXAAMSQThreshold(channel: ::std::os::raw::c_int, threshold: f64);
}
unsafe extern "C" {
    pub fn SetRXAEMNRRun(channel: ::std::os::raw::c_int, run: ::std::os::raw::c_int);
}
unsafe extern "C" {
    pub fn SetRXANNRRun(channel: ::std::os::raw::c_int, setit: ::std::os::raw::c_int);
}
